Add messages flash for user in application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,15 @@
   </head>
 
   <body>
-    <%= yield %>
+
+    <div class="container">
+
+      <!-- USERS MESSAGES -->
+      <%= render 'layouts/messages' %>
+
+      <!-- PAGE CONTENT -->
+      <%= yield %>
+      
+    </div>
   </body>
 </html>
