added appointement creation through view and fixed controller and routes

--- a/app/views/appointments/_new_appointment_form.html.erb
+++ b/app/views/appointments/_new_appointment_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(appointment: @appointment, local: true) do |form| %>
+<%= form_with model: @appointment, url: talent_appointments_path, local: true do |form| %>
   <% if @appointment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@appointment.errors.count, "error") %> prohibited this order from being saved:</h2>
@@ -11,9 +11,12 @@
     </div>
   <% end %>
 
+
+
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
+    <%= form.label :start_time %><br>
+    <%= form.date_field :start_time, class: 'form-control' %>
+    <%= select_time %>
   </div>
 
   <div class="actions">
