--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
 
       <!-- PAGE CONTENT -->
       <%= yield %>
-      
+
+      <!-- PAGE FOOTER -->
+      <%= render 'layouts/footer' %>
     </div>
   </body>
 </html>
