last set on links

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,16 +38,14 @@
             
             <hr>
             <!-- APPOINTMENTS -->
-            <a class="dropdown-item" href="<%= appointments_path %>">appointment#index</a>
-            <a class="dropdown-item" href="<%= appointment_path(1) %>">appointment#show n°1</a>
-            <a class="dropdown-item" href="<%= new_appointment_path %>">appointment#new</a>
-            <a class="dropdown-item" href="<%= edit_appointment_path(1) %>">appointment#edit n°1</a>
+            <a class="dropdown-item" href="<%= appointments_path %>">appointments#index</a>
+            <a class="dropdown-item" href="<%= new_talent_appointment_path(1) %>">appointments#new (talent n°1)</a>
             
             <hr>
             <!-- PLACES -->
-            <a class="dropdown-item" href="<%= places_path %>">place#index</a>
-            <a class="dropdown-item" href="<%= place_path(1) %>">place#show n°1</a>
-            <a class="dropdown-item" href="<%= edit_place_path(1) %>">place#edit n°1</a>
+            <a class="dropdown-item" href="<%= places_path %>">places#index</a>
+            <a class="dropdown-item" href="<%= place_path(1) %>">places#show n°1</a>
+            <a class="dropdown-item" href="<%= edit_place_path(1) %>">places#edit n°1</a>
             
             <hr>
             <!-- USERS -->
