--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,3 +2,12 @@
   <%= text_field_tag :search_keywords%>
   <%= submit_tag "Search"%>
 <% end %>
+
+<%# --- Random talents printed on home page --- %>
+<% @talents.sample(4).each do |talent|%>
+<ul>
+    <li> <%= talent.title%> </li>
+    <li> <%= talent.description%> </li>
+    <li> <%= talent.user_id%>
+</ul>
+<% end %>
