--- a/app/views/layouts/_searchform.html.erb
+++ b/app/views/layouts/_searchform.html.erb
@@ -1,5 +1,5 @@
 <form>
-    <div class="form-group row" style="max-width: 50rem;">
+    <div class="form-group row max-width-50">
         <label for="inputEmail3" class="col-sm-3 col-form-label-lg">Je veux apprendre:</label>
         <div class="col-sm-7">
           <input type="text" class="form-control form-control-lg" id="inputEmail3" placeholder="votre recherche">
