Flash messages & Model error messages -> on every page + translations

--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,3 +1,8 @@
 <h1>Appointment#new</h1>
+
+<!-- USERS MESSAGES -->
+<%= render 'layouts/messages' %>
+
 <p>Find me in app/views/appointment/new.html.erb</p>
+
 <%= render "new_appointment_form" %>
