--- a/app/views/talents/destroy.html.erb
+++ b/app/views/talents/destroy.html.erb
@@ -1,2 +1,6 @@
 <h1>Talents#destroy</h1>
+
+<!-- USERS MESSAGES -->
+<%= render 'layouts/messages' %>
+
 <p>Find me in app/views/talents/destroy.html.erb</p>
