--- a/app/views/talents/edit.html.erb
+++ b/app/views/talents/edit.html.erb
@@ -1,4 +1,8 @@
 <h1>Talents#edit</h1>
+
+<!-- USERS MESSAGES -->
+<%= render 'layouts/messages' %>
+
 <p>Find me in app/views/talents/edit.html.erb</p>
 
 
