--- a/app/views/talents/new.html.erb
+++ b/app/views/talents/new.html.erb
@@ -1,3 +1,7 @@
 <h1>Talents#new</h1>
+
+<!-- USERS MESSAGES -->
+<%= render 'layouts/messages' %>
+
 <p>Find me in app/views/talents/new.html.erb</p>
 <%= render "new_talent_form" %>
