--- a/app/views/talents/show.html.erb
+++ b/app/views/talents/show.html.erb
@@ -1,4 +1,8 @@
 <h1>Talents#show</h1>
+
+<!-- USERS MESSAGES -->
+<%= render 'layouts/messages' %>
+
 <p>Find me in app/views/talents/show.html.erb</p>
 
 <%if @talent.picture.attached?%>
