--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsAppModel</title>
+    <title>Talent Connect</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,19 +10,17 @@
   </head>
 
   <body>
-    <!-- NAVIGATION BAR -->
+    <!-- HEADER -->
     <%= render 'layouts/header' %>
 
     <div class="container">
-
-      <!-- USERS MESSAGES -->
-      <%= render 'layouts/messages' %>
 
       <!-- PAGE CONTENT -->
       <%= yield %>
 
       <!-- PAGE FOOTER -->
       <%= render 'layouts/footer' %>
+
     </div>
   </body>
 </html>
