--- a/app/views/pictures/create.html.erb
+++ b/app/views/pictures/create.html.erb
@@ -1,2 +1,6 @@
 <h1>Pictures#create</h1>
+
+<!-- USERS MESSAGES -->
+<%= render 'layouts/messages' %>
+
 <p>Find me in app/views/pictures/create.html.erb</p>
