--- a/app/views/places/update.html.erb
+++ b/app/views/places/update.html.erb
@@ -1,2 +1,6 @@
 <h1>Places#update</h1>
+
+<!-- USERS MESSAGES -->
+<%= render 'layouts/messages' %>
+
 <p>Find me in app/views/places/update.html.erb</p>
