--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
+
+<!-- USERS MESSAGES -->
+<%= render 'layouts/messages' %>
+
 <%= form_tag search_results_path, method: 'get' do %>
   <%= text_field_tag :search_keywords%>
   <%= submit_tag "Search"%>
