--- a/app/views/talents/index.html.erb
+++ b/app/views/talents/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Talents#index</h1>
+
+<!-- USERS MESSAGES -->
+<%= render 'layouts/messages' %>
+
 <p>Find me in app/views/talents/index.html.erb</p>
