--- a/app/views/layouts/_searchform.html.erb
+++ b/app/views/layouts/_searchform.html.erb
@@ -2,7 +2,7 @@
     <div class="form-group row max-width-50">
         <label for="inputEmail3" class="col-sm-3 col-form-label-lg">Je veux apprendre:</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control form-control-lg" id="inputEmail3" placeholder="votre recherche">
+          <input type="text" class="form-control form-control-lg" id="inputEmail3" placeholder="ta recherche">
         </div>
         <div class="col-sm-2">
             <button type="submit" class="btn btn-primary btn-lg mb-2">Recherche</button>
