--- a/app/views/static_pages/kit_ui.html
+++ b/app/views/static_pages/kit_ui.html
@@ -267,7 +267,7 @@
     <div class="form-group row max-width-50">
       <label for="inputEmail3" class="col-sm-3 col-form-label-lg">Je veux apprendre:</label>
       <div class="col-sm-7">
-        <input type="text" class="form-control form-control-lg" id="inputEmail3" placeholder="votre recherche">
+        <input type="text" class="form-control form-control-lg" id="inputEmail3" placeholder="ta recherche">
       </div>
       <div class="col-sm-2">
         <button type="submit" class="btn btn-primary btn-lg mb-2">Recherche</button>
@@ -282,15 +282,15 @@
   <form class="max-width-45">
     <div class="form-group">
       <label for="exampleInputEmail1">Email</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrez votre adresse email ici">
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entre ton adresse email ici">
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Mot de passe</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Entrez votre mot de passe ici">
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Entre ton mot de passe ici">
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Confirmez votre mot de passe</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Confirmez votre mot de passe">
+      <label for="exampleInputPassword1">Confirmes ton mot de passe</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Confirme ton mot de passe">
     </div><br>
     <div class="text-center">
     <button type="submit" class="btn btn-primary ">Valider</button>
