--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -300,6 +300,8 @@ a:hover {
   box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
 }
 
+/*BUTTONS*/
+
 .btn {
   border-radius: 1.8rem;
 }
@@ -639,6 +641,14 @@ a:hover {
   max-width: 18rem;
 }
 
+.max-width-22 {
+  max-width: 22rem;
+}
+
+textarea.form-control {
+  border-radius: 0.8rem !important;
+}
+
 .card-custom {
   position: relative;
   display: -ms-flexbox;
@@ -756,4 +766,8 @@ a.text-primary:focus {
 
 .text-danger {
   color: #FF6666 !important;
+}
+
+.text-secondary {
+  color: #D3D3D3 !important;
 }
