--- a/app/views/layouts/_card-talent-to-validate.html.erb
+++ b/app/views/layouts/_card-talent-to-validate.html.erb
@@ -12,8 +12,8 @@
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
       </div>
-      <div class="col-md-3 m-auto">
-        <button class="btn btn-outline-primary">En savoir plus</button>
+      <div class="col-md-3 m-auto pr-4 text-center">
+        <p class="text-danger">En attente de validation</p>
       </div>
     </div>
   </div>
