--- a/app/views/talents/search_results.html.erb
+++ b/app/views/talents/search_results.html.erb
@@ -1,9 +1,16 @@
 <h1> Résultat de la recherche pour "<%= params[:search_keywords]%>" </h1>
 <br>
+<% if @found_talents.empty?%>
+<h4> Aucun résultat trouvé. </h4>
+<% end %>
 <% @found_talents.each do |talent|%>
-<ul>
-    <li> <%= talent.title%> </li>
-    <li> <%= talent.description%> </li>
-    <li> <%= talent.user_id%>
-</ul>
+<div class="card-custom" style="width: 18rem;">
+  <img class="card-img-top" src="..." alt="Image du talent">
+  <div class="card-body">
+    <h5 class="card-title"><%= talent.title%></h5>
+    <p class="card-text"><%= talent.description%></p>
+    <a href="#" class="btn btn-primary">En savoir plus</a>
+  </div>
+</div>
+
  <% end %>
